Update CI/CD workflows

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,40 +9,10 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  create-release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-          body: |
-            ## What's New
-            
-            This is an automated release of ci-cd-pipeline.
-            
-            ### Installation
-            
-            Download the appropriate binary for your platform below.
-            
-            ### Checksums
-            
-            See the checksums.txt file for binary verification.
-
   release:
     name: Build & Release
-    needs: create-release
+    permissions:
+      contents: write
     strategy:
       matrix:
         include:
@@ -63,11 +33,9 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
+          targets: ${{ matrix.target }}
       
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
@@ -101,49 +69,26 @@ jobs:
           $hash = (Get-FileHash -Algorithm SHA256 ${{ matrix.name }}.zip).Hash
           "$hash  ${{ matrix.name }}.zip" | Out-File -FilePath ${{ matrix.name }}.zip.sha256
       
-      - name: Upload Release Asset (Linux/macOS)
-        if: matrix.os != 'windows-latest'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Release Assets
+        uses: softprops/action-gh-release@v2
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./${{ matrix.name }}.tar.gz
-          asset_name: ${{ matrix.name }}.tar.gz
-          asset_content_type: application/gzip
-      
-      - name: Upload Release Asset (Windows)
-        if: matrix.os == 'windows-latest'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./${{ matrix.name }}.zip
-          asset_name: ${{ matrix.name }}.zip
-          asset_content_type: application/zip
-      
-      - name: Upload Checksum (Linux/macOS)
-        if: matrix.os != 'windows-latest'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./${{ matrix.name }}.tar.gz.sha256
-          asset_name: ${{ matrix.name }}.tar.gz.sha256
-          asset_content_type: text/plain
-      
-      - name: Upload Checksum (Windows)
-        if: matrix.os == 'windows-latest'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./${{ matrix.name }}.zip.sha256
-          asset_name: ${{ matrix.name }}.zip.sha256
-          asset_content_type: text/plain
+          files: |
+            ${{ matrix.name }}.*
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+          body: |
+            ## What's New
+            
+            This is an automated release of ci-cd-pipeline.
+            
+            ### Installation
+            
+            Download the appropriate binary for your platform below.
+            
+            ### Checksums
+            
+            See the checksums files for binary verification.
 
   publish-crate:
     name: Publish to crates.io
@@ -153,10 +98,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
+        uses: dtolnay/rust-toolchain@stable
       
       - name: Publish to crates.io
         run: cargo publish --token ${{ secrets.CARGO_TOKEN }}
